# ML_project_2

./: .gitignore  README.md  pyproject.toml
src/Regresion_logistica/: Regresion_logistica.py
src/SVM_con_kernel/: KernelTrick (1)_con_kernel (1).py
src/SVM_sin_kernel/: MachineLearning2_sinkernel.py
